third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-borrows/eq_unassigned_local.exp
============ bytecode before first stackless bytecode pipeline ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: &u64
     var $t2: bool
     var $t3: &u64
     var $t4: &u64
  0: $t0 := 5
  1: $t3 := infer($t1)
  2: $t4 := borrow_local($t0)
  3: $t2 := ==($t3, $t4)
  4: return ()
}


Diagnostics:
error: use of unassigned local `ref`
  ┌─ tests/uninit-use-checker/v1-borrows/eq_unassigned_local.move:5:9
  │
5 │         ref == &x;
  │         ^^^

============ after uninitialized_use_checker: ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: &u64
     var $t2: bool
     var $t3: &u64
     var $t4: &u64
     # before: { no: $t0, $t1, $t2, $t3, $t4 }, after: { no: $t1, $t2, $t3, $t4 }
  0: $t0 := 5
     # before: { no: $t1, $t2, $t3, $t4 }, after: { no: $t1, $t2, $t4 }
  1: $t3 := infer($t1)
     # before: { no: $t1, $t2, $t4 }, after: { no: $t1, $t2 }
  2: $t4 := borrow_local($t0)
     # before: { no: $t1, $t2 }, after: { no: $t1 }
  3: $t2 := ==($t3, $t4)
     # before: { no: $t1 }, after: { no: $t1 }
  4: return ()
}
